// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TagNormalizer Characterization Tests inferCategory - category inference from tag lists infers category for ai-ml first 1`] = `"ai-ml"`;

exports[`TagNormalizer Characterization Tests inferCategory - category inference from tag lists infers category for all undefined 1`] = `undefined`;

exports[`TagNormalizer Characterization Tests inferCategory - category inference from tag lists infers category for empty array 1`] = `undefined`;

exports[`TagNormalizer Characterization Tests inferCategory - category inference from tag lists infers category for mixed with undefined first 1`] = `"framework"`;

exports[`TagNormalizer Characterization Tests inferCategory - category inference from tag lists infers category for single tag with category 1`] = `"cloud"`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "   " (whitespace only) 1`] = `
{
  "category": undefined,
  "name": "",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "  trimmed  " (needs trimming) 1`] = `
{
  "category": undefined,
  "name": "Trimmed",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "" (empty string) 1`] = `
{
  "category": undefined,
  "name": "",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes ".net" (leading dot) 1`] = `
{
  "category": "framework",
  "name": ".NET",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "ES2024" (year suffix) 1`] = `
{
  "category": undefined,
  "name": "ES2024",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "JAVASCRIPT" (all caps) 1`] = `
{
  "category": "language",
  "name": "JavaScript",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "JavaScript" (proper case) 1`] = `
{
  "category": "language",
  "name": "JavaScript",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "Python 3.11" (with version) 1`] = `
{
  "category": undefined,
  "name": "Python 3.11",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "React 18" (with major version) 1`] = `
{
  "category": undefined,
  "name": "React 18",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "UNKNOWNTAG" (unknown uppercase) 1`] = `
{
  "category": undefined,
  "name": "UNKNOWNTAG",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "UnknownTag" (unknown mixed case) 1`] = `
{
  "category": undefined,
  "name": "UnknownTag",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "c#" (hash sign) 1`] = `
{
  "category": "language",
  "name": "C#",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "c++" (plus signs) 1`] = `
{
  "category": "language",
  "name": "C++",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "deep learning" (spaced) 1`] = `
{
  "category": undefined,
  "name": "Deep learning",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "javascript" (all lowercase) 1`] = `
{
  "category": "language",
  "name": "JavaScript",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "machine_learning" (underscored) 1`] = `
{
  "category": undefined,
  "name": "Machine-learning",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "machine-learning" (hyphenated) 1`] = `
{
  "category": undefined,
  "name": "Machine-learning",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "node.js" (dot in name) 1`] = `
{
  "category": "framework",
  "name": "Node.js",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "unknowntag" (unknown lowercase) 1`] = `
{
  "category": undefined,
  "name": "Unknowntag",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "データベース" (japanese database) 1`] = `
{
  "category": undefined,
  "name": "データベース",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "フロントエンド" (japanese frontend) 1`] = `
{
  "category": undefined,
  "name": "フロントエンド",
}
`;

exports[`TagNormalizer Characterization Tests normalize - individual tag variations normalizes "機械学習" (japanese ml) 1`] = `
{
  "category": undefined,
  "name": "機械学習",
}
`;

exports[`TagNormalizer Characterization Tests normalizeTags - comprehensive input variations normalizes aiAndLlm tags correctly: aiAndLlm-normalization 1`] = `
[
  {
    "category": "ai-ml",
    "name": "Claude",
  },
  {
    "category": "ai-ml",
    "name": "GPT",
  },
  {
    "category": "ai-ml",
    "name": "OpenAI",
  },
  {
    "category": "ai-ml",
    "name": "Gemini",
  },
  {
    "category": "ai-ml",
    "name": "LLM",
  },
  {
    "category": "ai-ml",
    "name": "AI",
  },
  {
    "category": "ai-ml",
    "name": "AIエージェント",
  },
]
`;

exports[`TagNormalizer Characterization Tests normalizeTags - comprehensive input variations normalizes cloud tags correctly: cloud-normalization 1`] = `
[
  {
    "category": "cloud",
    "name": "AWS",
  },
  {
    "category": "cloud",
    "name": "GCP",
  },
  {
    "category": "cloud",
    "name": "Azure",
  },
  {
    "category": "cloud",
    "name": "Docker",
  },
  {
    "category": "cloud",
    "name": "Kubernetes",
  },
  {
    "category": "cloud",
    "name": "Terraform",
  },
  {
    "category": "cloud",
    "name": "Vercel",
  },
]
`;

exports[`TagNormalizer Characterization Tests normalizeTags - comprehensive input variations normalizes databases tags correctly: databases-normalization 1`] = `
[
  {
    "category": "database",
    "name": "PostgreSQL",
  },
  {
    "category": "database",
    "name": "MySQL",
  },
  {
    "category": "database",
    "name": "MongoDB",
  },
  {
    "category": "database",
    "name": "Redis",
  },
  {
    "category": undefined,
    "name": "Dynamodb",
  },
  {
    "category": undefined,
    "name": "DynamoDB",
  },
  {
    "category": "database",
    "name": "SQLite",
  },
]
`;

exports[`TagNormalizer Characterization Tests normalizeTags - comprehensive input variations normalizes devops tags correctly: devops-normalization 1`] = `
[
  {
    "category": undefined,
    "name": "Ci/cd",
  },
  {
    "category": undefined,
    "name": "CI/CD",
  },
  {
    "category": "cloud",
    "name": "GitHub",
  },
  {
    "category": undefined,
    "name": "Jenkins",
  },
  {
    "category": undefined,
    "name": "Circleci",
  },
  {
    "category": undefined,
    "name": "CircleCI",
  },
  {
    "category": "cloud",
    "name": "GitLab",
  },
]
`;

exports[`TagNormalizer Characterization Tests normalizeTags - comprehensive input variations normalizes frameworks tags correctly: frameworks-normalization 1`] = `
[
  {
    "category": "framework",
    "name": "React",
  },
  {
    "category": "framework",
    "name": "Vue.js",
  },
  {
    "category": "framework",
    "name": "Next.js",
  },
  {
    "category": "framework",
    "name": "Node.js",
  },
  {
    "category": "framework",
    "name": "Express",
  },
  {
    "category": undefined,
    "name": "Fastapi",
  },
  {
    "category": undefined,
    "name": "FastAPI",
  },
  {
    "category": "framework",
    "name": "Django",
  },
  {
    "category": "framework",
    "name": "Ruby on Rails",
  },
]
`;

exports[`TagNormalizer Characterization Tests normalizeTags - comprehensive input variations normalizes mixedRealWorld tags correctly: mixedRealWorld-normalization 1`] = `
[
  {
    "category": "framework",
    "name": "React",
  },
  {
    "category": "language",
    "name": "TypeScript",
  },
  {
    "category": "cloud",
    "name": "AWS",
  },
  {
    "category": "cloud",
    "name": "Docker",
  },
  {
    "category": "framework",
    "name": "Next.js",
  },
  {
    "category": "database",
    "name": "PostgreSQL",
  },
  {
    "category": "database",
    "name": "Prisma",
  },
  {
    "category": "framework",
    "name": "Tailwind CSS",
  },
  {
    "category": "cloud",
    "name": "Vercel",
  },
  {
    "category": "cloud",
    "name": "GitHub",
  },
]
`;

exports[`TagNormalizer Characterization Tests normalizeTags - comprehensive input variations normalizes programmingLanguages tags correctly: programmingLanguages-normalization 1`] = `
[
  {
    "category": "language",
    "name": "JavaScript",
  },
  {
    "category": "language",
    "name": "TypeScript",
  },
  {
    "category": "language",
    "name": "Python",
  },
  {
    "category": "language",
    "name": "Go",
  },
  {
    "category": "language",
    "name": "Rust",
  },
  {
    "category": "language",
    "name": "Java",
  },
  {
    "category": "language",
    "name": "Ruby",
  },
]
`;

exports[`TagNormalizer Characterization Tests normalizeTags - comprehensive input variations normalizes security tags correctly: security-normalization 1`] = `
[
  {
    "category": undefined,
    "name": "Security",
  },
  {
    "category": "security",
    "name": "OAuth",
  },
  {
    "category": "security",
    "name": "JWT",
  },
  {
    "category": undefined,
    "name": "Xss",
  },
  {
    "category": undefined,
    "name": "XSS",
  },
  {
    "category": undefined,
    "name": "Csrf",
  },
  {
    "category": undefined,
    "name": "CSRF",
  },
]
`;

exports[`TagNormalizer Characterization Tests normalizeTags - comprehensive input variations normalizes web tags correctly: web-normalization 1`] = `
[
  {
    "category": undefined,
    "name": "Api",
  },
  {
    "category": undefined,
    "name": "API",
  },
  {
    "category": "web",
    "name": "REST API",
  },
  {
    "category": "web",
    "name": "GraphQL",
  },
  {
    "category": "web",
    "name": "WebSocket",
  },
  {
    "category": undefined,
    "name": "Http",
  },
  {
    "category": undefined,
    "name": "HTTP",
  },
  {
    "category": "security",
    "name": "SSL/TLS",
  },
]
`;

exports[`TagNormalizer Characterization Tests rules coverage - verify all rule categories are tested all categories have coverage in tests: rule-categories 1`] = `
[
  "ai-ml",
  "language",
  "framework",
  "cloud",
  "database",
  "devops",
  "security",
  "web",
]
`;
